FCAI debugging