@@ -44,7 +44,7 @@ public class FCAIScheduler {
             readyQueue.sort(Comparator.comparingDouble(Process::getFcaiFactor));
 
             // Select the process with the lowest FCAI factor
-            Process selectedProcess = readyQueue.get(0);
+            Process selectedProcess = readyQueue.getFirst();
 
             // Add current quantum to quantum history
             quantumHistory.get(selectedProcess.getName()).add(selectedProcess.getQuantum());
@@ -52,7 +52,11 @@ public class FCAIScheduler {
             // Execute process for 40% of its quantum
             int timeSlice = (int) Math.ceil(selectedProcess.getQuantum() * 0.4);
             int executionTime = Math.min(timeSlice, selectedProcess.getRemainingTime());
+
+            System.out.println(selectedProcess.getName() + ": ( "+ currentTime + " - "+ (currentTime+executionTime) + " )");
+
             currentTime += executionTime;
+            System.out.println("Time: after 40% " + currentTime);
 
             // Update remaining burst time
             selectedProcess.setRemainingTime(selectedProcess.getRemainingTime() - executionTime);
@@ -68,9 +72,10 @@ public class FCAIScheduler {
                 }
                 readyQueue.sort(Comparator.comparingDouble(Process::getFcaiFactor));
 
-                Process potentialPreemptingProcess = readyQueue.get(0);
+                Process potentialPreemptingProcess = readyQueue.getFirst();
                 if (potentialPreemptingProcess != selectedProcess) {
                     // Preempt the current process
+                    System.out.println("Switching ...");
                     int unusedQuantum = selectedProcess.getQuantum() - executionTime;
                     selectedProcess.adjustQuantum(unusedQuantum);
 
@@ -83,6 +88,11 @@ public class FCAIScheduler {
 
             // If the process finishes or continues, adjust quantum and move on
             if (selectedProcess.getRemainingTime() > 0) {
+                // Continue running for rest of quantum
+                int remainingQuantum = Math.min((selectedProcess.getQuantum() - executionTime), selectedProcess.getRemainingTime());
+                selectedProcess.setRemainingTime(selectedProcess.getRemainingTime() - remainingQuantum);
+                currentTime += remainingQuantum;
+                System.out.println("Time: after rest of quantum " + currentTime);
                 selectedProcess.adjustQuantum(2); // Add 2 to quantum if not finished
             } else {
                 readyQueue.remove(selectedProcess); // Remove completed process
@@ -145,9 +155,10 @@ public class FCAIScheduler {
     public static void main(String[] args) {
         // Example processes
         List<Process> processList = Arrays.asList(
-                new Process("P1", "Red", 0, 10, 1, 5),
-                new Process("P2", "Blue", 2, 8, 2, 6),
-                new Process("P3", "Green", 4, 6, 3, 4)
+                new Process("P1", "Red", 0, 17, 4, 4),
+                new Process("P2", "Blue", 3, 6, 9, 3),
+                new Process("P3", "Green", 4, 10, 3, 5),
+                new Process("P4", "Green", 29, 4, 8, 2)
         );
 
         FCAIScheduler scheduler = new FCAIScheduler(processList, 2);
